# PWHomeWork8part1

./: README.md  find_quote.py  load_json.py  models.py  pyproject.toml
data/: authors.json
